@@ -12,6 +12,7 @@ Changes
 09/02/16 r239 Updated GeoIP.dat
 
 Fixes
+09/03/03 r263 Fixed SQL not always working after reinitialization [closes #529]
 09/03/02 r261 Make inspircd12 module check for TS6 and numeric on load
 09/02/26 r256 Fixed missing NICK handling in inspircd12
 09/02/26 r256 Nick tracking no longer removes old nick alias on nick change
